test_regress/t/t_disable_iff_multi_bad.out
%Error: t/t_disable_iff_multi_bad.v:14:4: Only one 'default disable iff' allowed per module (IEEE 1800-2023 16.15)
                                        : ... note: In instance 't'
   14 |    default disable iff (!rstn);
      |    ^~~~~~~
%Error: Exiting due to
